<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
                android:background="@drawable/bg_fff_background"
              android:orientation="vertical">

    <TextView
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/cyht_content_size"
        android:textColor="@color/cyht_content_color"
        android:text="@string/share_dialog_title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/cyht_vertical_spacing"
        android:paddingLeft="42dp"
        android:paddingRight="42dp">

        <include layout="@layout/line_horizontal" />

        <LinearLayout
            android:id="@+id/share_layout_wx"
            android:layout_marginTop="@dimen/cyht_vertical_spacing"
            android:layout_marginBottom="@dimen/cyht_vertical_spacing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

             <ImageView
                 android:id="@+id/share_btn_wx"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@mipmap/share01"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_spacing"
                android:textSize="@dimen/cyht_content_size"
                android:textColor="@color/cyht_content_color"
                android:text="@string/login_wx"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="@dimen/cyht_vertical_spacing"
            android:layout_marginBottom="@dimen/cyht_vertical_spacing"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/share_btn_cycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/share02"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_spacing"
                android:textSize="@dimen/cyht_content_size"
                android:textColor="@color/cyht_content_color"
                android:text="@string/share_dialog_cycle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/cyht_vertical_spacing"
            android:layout_marginBottom="@dimen/cyht_vertical_spacing"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/share_btn_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/share03"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_spacing"
                android:textSize="@dimen/cyht_content_size"
                android:textColor="@color/cyht_content_color"
                android:text="@string/login_qq"/>
        </LinearLayout>


        <LinearLayout
            android:layout_below="@id/share_layout_wx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/share_btn_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/share04"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_spacing"
                android:textSize="@dimen/cyht_content_size"
                android:textColor="@color/cyht_content_color"
                android:text="@string/share_dialog_space"/>
        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/share_layout_wx"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/share_btn_wb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/share05"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_spacing"
                android:textSize="@dimen/cyht_content_size"
                android:textColor="@color/cyht_content_color"
                android:text="@string/login_wb"/>
        </LinearLayout>
    </RelativeLayout>

    <include layout="@layout/line_horizontal" />

    <Button
        android:id="@+id/share_btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cyht_button_height"
        android:textSize="@dimen/cyht_button_text_size"
        android:textColor="@color/cyht_content_color"
        android:text="取消"
        android:background="@drawable/cyht_item_selector"/>


</LinearLayout>