<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="49dp">

    <LinearLayout
        android:id="@+id/ll_left"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/ll_center"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_left"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:scaleType="center"
            android:src="@mipmap/main_pressed" />

        <TextView
            android:id="@+id/tv_left"
            android:layout_marginTop="3dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/mainf"
            android:textColor="@color/material_blue_500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_center"
        android:layout_centerInParent="true"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="center"
            android:layout_marginTop="3dp"
            android:src="@mipmap/car_nopress" />

        <TextView
            android:id="@+id/tv_center"
            android:text="@string/carbrandf"
            android:textColor="@color/gray"
            android:layout_marginTop="3dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_right"
        android:layout_alignTop="@+id/ll_center"
        android:layout_alignParentRight="true"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="center"
            android:layout_marginTop="3dp"
            android:src="@mipmap/person_nopress" />

        <TextView
            android:id="@+id/tv_right"
            android:layout_marginTop="3dp"
            android:text="@string/settingf"
            android:textColor="@color/gray"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>